# roguelike-td

./: .gitignore  README.md
.github/workflows/: pages.yml
balance/: README.md  export_json.py  pyproject.toml  validate.py
balance/data/: affixes.yaml  bonds.yaml  boss_debuffs.yaml  consumables.yaml  economy.yaml  equipment.yaml  skills.yaml  synergies.yaml  waves.yaml
balance/reports/: __init__.py  build_all.py  build_site.py  build_walkthrough.py  charts.py  curves_report.py  economy_report.py  run_report.py  test_report.py
balance/td_balance/: __init__.py  combat_stats.py  curves.py  economy.py  loader.py  player.py  rng.py  rogue_pools.py  run_sim.py  schemas.py  strategy.py  synergy_engine.py
balance/td_balance/combat/: __init__.py  damage.py
balance/tests/: __init__.py  test_bugfix_regression.py  test_combat_stats.py  test_curves.py  test_damage.py  test_devour.py  test_economy.py  test_equipment.py  test_rogue_pools.py  test_run_sim.py  test_specials.py  test_strategy.py  test_synergy_engine.py  test_walkthrough.py  verify_synergy.py
client/: .gitignore  project.godot
client/data/: affixes.json  bonds.json  boss_debuffs.json  consumables.json  economy.json  equipment.json  skills.json  synergies.json  waves.json
client/tests/: test_bugfix.gd  test_bugfix.gd.uid  test_draw_debug.gd  test_draw_debug.gd.uid  test_equipment.gd  test_equipment.gd.uid  test_synergy.gd  test_synergy.gd.uid  (+2 more)
docs/: ART_PIPELINE.md  ENGAGEMENT_DESIGN.md  GAME_DESIGN.md  M2_5_DESIGN.md  TECHNICAL_ARCHITECTURE.md
tools/: README.md  art_prompts.yaml  gen_art.py
(+50 files in other folders)
