[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "td-balance"
version = "0.1.0"
description = "Balance validation toolkit for roguelike-td. Encodes the GDD combat/economy formulas and curves as runnable, unit-tested code. Single source of truth shared by the Godot client and the server-side validator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "roguelike-td" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
reports = [
    "matplotlib>=3.8",
]

[project.scripts]
td-validate = "validate:main"

# ── Tooling ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["td_balance"]

# ── uv ──
# 本项目用 uv 作包管理。应用项目应提交 uv.lock（已在 .gitignore 中保留）。
[tool.uv]
package = true
